Closed Bug 17381 Opened 26 years ago Closed 26 years ago

Small drag targets can cause event.target to be wrong

Categories

(Core :: XUL, defect, P3)

All
Mac System 8.5
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: mikepinkerton, Assigned: mikepinkerton)

Details

If an item to be dragged is small enough that the 5 pixel delta to initiate a drag-gesture event causes the mouse to be over another frame, the target field of the event will be where the mouse is currently over, not the source of the click. this can be seen in the tiny personal toolbar buttons. clicking and dragging straight down will cause the target to be the nav toolbar.
Status: NEW → ASSIGNED
Target Milestone: M12
m12, accepting.
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
fix checked in.
Status: RESOLVED → VERIFIED
code level fix, marking VERIFIED
You need to log in before you can comment on or make changes to this bug.